# mtg-search

./: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix  index.html  readme.md
.github/workflows/: pages.yml
archidekt/: Cargo.toml
archidekt/src/: color.rs  lib.rs  scryfall.rs
src/: app.rs  collection.rs  loader.rs  main.rs  web.rs
