[package]
name = "mtg-searcher"
version = "0.1.0"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = "0.27.2"

reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
strum = { version = "0.26.2", features = ["derive"] }
csv = "1.3.0"
log = "0.4.21"

env_logger = "0.11.3"

