[package]
name = "mtg-searcher"
version = "0.1.0"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["http"] }
image = { version = "0.25", features = ["png"] }

csv.workspace = true
archidekt.workspace = true
serde.workspace = true
anyhow.workspace = true
strum.workspace = true
log.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
ehttp.workspace = true
wasm-bindgen-futures = "0.4"

[build-dependencies]
csv.workspace = true
archidekt.workspace = true
strum.workspace = true

[profile.release]
opt-level = 2 # fast and small wasm

[workspace]
members = [
    "archidekt",
]

[workspace.dependencies]
csv = "1.3.0"
archidekt = { path = "./archidekt" }
ehttp = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
strum = { version = "0.26.2", features = ["derive"] }
log = "0.4.21"
